Closed Bug 636034 Opened 15 years ago Closed 15 years ago

-moz-box-ordinal-group should not accept '0' value

Categories

(Core :: CSS Parsing and Computation, defect, P4)

defect

Tracking

()

RESOLVED FIXED
mozilla5

People

(Reporter: dbaron, Assigned: dbaron)

Details

Attachments

(1 file)

Attached patch patchSplinter Review
The parsing code for the -moz-box-ordinal-group value should not accept '0', since the code that uses the value of the property ignores the '0' value. There are no uses of '0' in the tree.
Attachment #514351 - Flags: review?(bzbarsky)
Attachment #514351 - Flags: review?(bzbarsky) → review+
Status: ASSIGNED → RESOLVED
Closed: 15 years ago
Priority: -- → P4
Resolution: --- → FIXED
Whiteboard: fixed-in-birch
Target Milestone: --- → mozilla2.2
(In reply to comment #0) > since the code that uses the value of the property ignores the '0' value. Isn't that a bug? ordinal="0" works.
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: