-moz-box-ordinal-group should not accept 0, since the code that uses the property ignores values of 0.  (Bug 636034)  r=bzbarsky